- Receive HDMI connection changes through new bus type. - Removed swapping actual resolution(non desktop) with RES_DESKTOP. - This should be last commit from the series around resolution handling whose are introducing dynamic resolution list (res. list can be updated during XBMC run - as result of different display device reattach, usage of passive CEC switches - which do not have HDMI/EDID signal passthrough when powered off). XBMC will also auto adapt the output resolution to match previous (or find as close as possible). - Change format of report of found resolutions
Upstream-commit: a00cfb2606c387cb10b9d4131e7116d3d8f3c418

--- a/xbmc/peripherals/bus/Makefile.in
+++ b/xbmc/peripherals/bus/Makefile.in
@@ -8,6 +8,7 @@ endif
 
 ifeq (@USE_LIBUDEV@,1)
 SRCS += linux/PeripheralBusUSBLibUdev.cpp
+SRCS += linux/PeripheralBusPLATFORMLibUdev.cpp
 endif
 
 ifeq (@USE_LIBUSB@,1)
