--- a/xbmc/peripherals/devices/Makefile.in
+++ b/xbmc/peripherals/devices/Makefile.in
@@ -7,6 +7,7 @@ SRCS += PeripheralJoystick.cpp
 SRCS += PeripheralNIC.cpp
 SRCS += PeripheralNyxboard.cpp
 SRCS += PeripheralTuner.cpp
+SRCS += PeripheralVideo.cpp
 
 ifeq (@USE_LIBCEC@,1)
 SRCS += PeripheralCecAdapter.cpp
