--- a/tools/android/packaging/Makefile.in
+++ b/tools/android/packaging/Makefile.in
@@ -1,6 +1,7 @@
 include ../../depends/Makefile.include
 
 OBJS = libcurl.so \
+  libafpclient.so  \
   libplist.so libshairplay.so \
   libnfs.so libass.so \
   libbluray.so libsmbclient.so
